--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <section>
       <div>
-        <h1>ROCK PAPER SCISSORS`</h1>
+        <h1>ROCK PAPER SCISSORS</h1>
         <h2>2</h2>
       </div>
     </section>
