--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section>
-      <div>
+      <div class="flex">
         <h1>ROCK PAPER SCISSORS</h1>
         <h2>2</h2>
       </div>
