--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body>
-    <div id="gameZone flex">
+    <div id="gameZone">
       <img class="js-hand" src="./img/paper.svg" alt="paper" />
       <img class="js-hand" src="./img/scissors.svg" alt="scissors" />
       <img class="js-hand" src="./img/rock.svg" alt="rock" />
     </div>
 
-    <div id="proccessZone display-none">
+    <div id="proccessZone  hidden">
       <img id="user" src="./img/choosing.svg" alt="choosing-user" />
       <button id="reloadbtn">Reload</button>
       <img id="ai" src="./img/choosing.svg" alt="choosing-ai" />
