--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img class="js-hand" src="./img/rock.svg" alt="rock" />
     </div>
 
-    <div id="proccessZone  hidden">
+    <div id="proccessZone" class="hidden">
       <img id="user" src="./img/choosing.svg" alt="choosing-user" />
       <button id="reloadbtn">Reload</button>
       <img id="ai" src="./img/choosing.svg" alt="choosing-ai" />
