--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <img class="js-hand" src="./img/rock.svg" alt="rock" />
     </div>
 
+    <h1 class="text-3xl font-bold underline">Hello world!</h1>
+
     <div id="proccessZone" class="proccess-zone">
       <img id="user" src="./img/choosing.svg" alt="choosing-user" />
       <button id="reloadbtn">Reload</button>
