--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <img class="js-hand" src="./img/rock.svg" alt="rock" />
     </div>
 
-    <h1 class="text-3xl font-bold underline">Hello world!</h1>
-
-    <div id="proccessZone" class="proccess-zone">
+    <div id="proccessZone" class="hidden">
       <img id="user" src="./img/choosing.svg" alt="choosing-user" />
       <button id="reloadbtn">Reload</button>
       <img id="ai" src="./img/choosing.svg" alt="choosing-ai" />
