--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body>
-    <div id="gameZone" class="game-zone">
-      <img class="js-hand" src="./img/paper.svg" alt="paper" />
-      <img class="js-hand" src="./img/scissors.svg" alt="scissors" />
-      <img class="js-hand" src="./img/rock.svg" alt="rock" />
+    <div class="flex justify-center items-center">
+      <div
+        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+        <img class="js-hand" src="./img/paper.svg" alt="paper" />
+        <img class="js-hand" src="./img/scissors.svg" alt="scissors" />
+        <img class="js-hand" src="./img/rock.svg" alt="rock" />
+      </div>
     </div>
 
     <div id="proccessZone" class="hidden">
