--- a/index.html
+++ b/index.html
@@ -52,15 +52,64 @@
           src="./img/rock.svg"
           alt="rock" />
       </div>
-
+      <!-- Buttons  -->
       <div
         class="flex items-center justify-end gap-2 shadow-xs hover:bg-neutral-secondary-mediumblock max-w-3xl p-6 ml-auto mr-auto my-14 absolute right-20 bottom-3">
+        <!-- Modal toggle -->
         <button
           id="rules"
+          data-modal-target="default-modal"
+          data-modal-toggle="default-modal"
           type="button"
           class="text-center p-3.5 min-w-[100px] uppercase rounded-lg text-[#ffffff] shadow-[0px_3px_3px_0px_rgba(0,0,0,0.20)] bg-none border transition-colors hover:bg-white hover:text-black">
           RULES
         </button>
+
+        <!-- Main modal -->
+        <div
+          id="default-modal"
+          tabindex="-1"
+          aria-hidden="true"
+          class="hidden overflow-y-auto overflow-x-hidden fixed top-96 left-96 flex justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+          <div>
+            <!-- Modal content -->
+            <div
+              class="relative bg-neutral-primary-soft border border-white rounded-lg shadow-sm p-4 md:p-6 bg-[#FFFFFF]">
+              <!-- Modal header -->
+              <div class="flex items-center justify-center pb-4">
+                <strong
+                  class="mb-3 text-[#565468] text-4xl font-semibold tracking-tight text-heading leading-8"
+                  >RULES</strong
+                >
+                <button
+                  type="button"
+                  class="text-body bg-transparent hover:bg-neutral-tertiary hover:text-heading rounded-base text-sm w-9 h-9 ms-auto inline-flex justify-center items-center"
+                  data-modal-hide="default-modal">
+                  <svg
+                    class="w-5 h-5"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill="none"
+                    viewBox="0 0 24 24">
+                    <path
+                      stroke="currentColor"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M6 18 17.94 6M18 18 6.06 6" />
+                  </svg>
+                </button>
+              </div>
+              <!-- Modal body -->
+              <div class="">
+                <img src="./img/rule-basic.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+
         <button
           id="advancedMode"
           type="button"
@@ -69,14 +118,21 @@
         </button>
       </div>
     </div>
-
+    <!-- Proccess zone -->
     <div id="proccessZone" class="hidden justify-center items-center gap-6">
-      <img
-        id="user"
-        class="transition-all w-[200px] h-[200px] rounded-full shadow-[0px_3px_3px_0px_rgba(0,0,0,0.20)]"
-        src="./img/choosing.svg"
-        alt="choosing-user" />
-
+      <!-- user  -->
+      <div class="flex flex-col items-center">
+        <h3
+          class="text-white text-[24px] leading-[32px] mb-16 uppercase drop-shadow-[0px_3px_3px_rgba(0,0,0,0.20)]">
+          You picked
+        </h3>
+        <img
+          id="user"
+          class="transition-all w-[200px] h-[200px] rounded-full shadow-[0px_3px_3px_0px_rgba(0,0,0,0.20)]"
+          src="./img/choosing.svg"
+          alt="choosing-user" />
+      </div>
+      <!-- Reply button  -->
       <div>
         <h3
           class="font-bold text-[56px] mb-4 text-white leading-none uppercase drop-shadow-[0px_3px_3px_rgba(0,0,0,0.20)]">
@@ -89,11 +145,18 @@
           PLAY AGAIN
         </button>
       </div>
-      <img
-        id="ai"
-        class="transition-all w-[200px] h-[200px] rounded-full shadow-[0px_3px_3px_0px_rgba(0,0,0,0.20)]"
-        src="./img/choosing.svg"
-        alt="choosing-ai" />
+      <!-- ai -->
+      <div class="flex flex-col items-center">
+        <h3
+          class="text-[24px] leading-[32px] text-white mb-16 uppercase drop-shadow-[0px_3px_3px_rgba(0,0,0,0.20)]">
+          The house picked
+        </h3>
+        <img
+          id="ai"
+          class="transition-all w-[200px] h-[200px] rounded-full shadow-[0px_3px_3px_0px_rgba(0,0,0,0.20)]"
+          src="./img/choosing.svg"
+          alt="choosing-ai" />
+      </div>
     </div>
 
     <script type="module" src="./js/app.js"></script>
