--- a/index.html
+++ b/index.html
@@ -34,23 +34,52 @@
       </div>
     </div>
     <div>
-      <div
-        id="gameZone"
-        class="flex flex-col items-center justify-center gap-7">
-        <div class="flex items-center justify-center gap-20">
+      <!-- Game zone -->
+      <div id="gameZone">
+        <!-- Basic mode -->
+        <div id="basic" class="flex flex-col items-center justify-center gap-7">
+          <div class="flex items-center justify-center gap-20">
+            <img
+              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/paper.svg"
+              alt="paper" />
+            <img
+              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/scissors.svg"
+              alt="scissors" />
+          </div>
+          <img
+            class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+            src="./img/rock.svg"
+            alt="rock" />
+        </div>
+        <!-- Advanced mode -->
+        <div id="advanced" class="flex justify-center items-center">
           <img
             class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
             src="./img/paper.svg"
             alt="paper" />
-          <img
-            class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
-            src="./img/scissors.svg"
-            alt="scissors" />
+          <div>
+            <img
+              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/scissors.svg"
+              alt="paper" />
+            <img
+              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/rock.svg"
+              alt="paper" />
+          </div>
+          <div>
+            <img
+              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/spock.svg"
+              alt="paper" />
+            <img
+              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/lizard.svg"
+              alt="paper" />
+          </div>
         </div>
-        <img
-          class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
-          src="./img/rock.svg"
-          alt="rock" />
       </div>
       <!-- Buttons  -->
       <div
@@ -114,7 +143,7 @@
           id="advancedMode"
           type="button"
           class="text-center p-3.5 min-w-[100px] uppercase rounded-lg text-[#ffffff] shadow-[0px_3px_3px_0px_rgba(0,0,0,0.20)] bg-none border transition-colors hover:bg-white hover:text-black">
-          ADVANCED
+          MODE
         </button>
       </div>
     </div>
