--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           >SCORE</span
         >
         <strong
+          id="score"
           class="mb-3 text-[#565468] text-6xl font-semibold tracking-tight text-heading leading-8"
           >0</strong
         >
@@ -54,29 +55,31 @@
             alt="rock" />
         </div>
         <!-- Advanced mode -->
-        <div id="advanced" class="flex justify-center items-center">
-          <img
-            class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
-            src="./img/paper.svg"
-            alt="paper" />
+        <div id="advanced" class="flex flex-col justify-center items-center">
           <div>
             <img
-              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              class="js-hand w-52 h-52 -mb-9 transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
               src="./img/scissors.svg"
               alt="paper" />
-            <img
-              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
-              src="./img/rock.svg"
-              alt="paper" />
           </div>
-          <div>
+          <div class="flex justify-center items-center gap-[200px]">
             <img
-              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              class="js-hand w-52 h-52 transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
               src="./img/spock.svg"
               alt="paper" />
             <img
-              class="js-hand transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              class="js-hand w-52 h-52 transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/paper.svg"
+              alt="paper" />
+          </div>
+          <div class="flex justify-center items-center gap-[60px] mt-[38px]">
+            <img
+              class="js-hand w-52 h-52 transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
               src="./img/lizard.svg"
+              alt="paper" />
+            <img
+              class="js-hand w-52 h-52 transition-shadow hover:shadow-[0px_0px_0px_27px_rgba(255,255,255,0.05)] rounded-full place-self-center"
+              src="./img/rock.svg"
               alt="paper" />
           </div>
         </div>
